[package]
name = "novinet-wasm-accordion"
version = "0.1.0"
authors = ["novinet-markusd <markus.dick@novinet.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
  'DomTokenList',
  'console',
  'MouseEvent',
  'Event',
  'EventTarget',
  'HtmlElement',
  'CssStyleDeclaration',
  'HtmlCollection',
]

[profile.release]
lto = true
opt-level = 'z'